examples/test/testpolicy7142.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7142
  namespace: namespace261
spec:
  podSelector:
    matchLabels:
      key21: value28
      key3: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value45
          key48: value46
          key35: value41
      podSelector:
        matchLabels:
          key36: value21
          key38: value26
          key25: value12
